--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         }
     </style>
 
-    <script type="text/javascript" src="../timeline.js"></script>
-    <link rel="stylesheet" type="text/css" href="../timeline.css">
+    <script type="text/javascript" src="./timeline.js"></script>
+    <link rel="stylesheet" type="text/css" href="./timeline.css">
 
     <script type="text/javascript">
         var timeline;
