--- a/index.html
+++ b/index.html
@@ -21,39 +21,35 @@
             // Create a JSON data table
             data = [
                 {
-                    'start': new Date(2010,7,23),
-                    'content': 'Conversation<br><img src="img/comments-icon.png" style="width:32px; height:32px;">'
+                    'start': new Date(2021,01,08),
+                    'end': new Date(2021,05,06),
+                    'content': 'MINISTERIO DA ECONOMIA'
                 },
                 {
-                    'start': new Date(2010,7,23,23,0,0),
-                    'content': 'Mail from boss<br><img src="img/mail-icon.png" style="width:32px; height:32px;">'
+                    'start': new Date(2021,5,24),
+                    'end': new Date(2021,8,26),
+                    'content': 'BANCO DO BRASIL'
                 },
                 {
-                    'start': new Date(2010,7,24,16,0,0),
-                    'content': 'Report'
+                    'start': new Date(2021,8,10),
+                    'end': new Date(2021,9,3),
+                    'content': 'CAIXA ECONOMICA'
                 },
                 {
-                    'start': new Date(2010,7,26),
-                    'end': new Date(2010,8,2),
-                    'content': 'Traject A'
+                    'start': new Date(2021,9,20),
+                    'end': new Date(2022,0,23),
+                    'content': 'FUNPRESP'
                 },
                 {
-                    'start': new Date(2010,7,28),
-                    'content': 'Memo<br><img src="img/notes-edit-icon.png" style="width:48px; height:48px;">'
+                    'start': new Date(2022,0,03),
+                    'end': new Date(2022,2,20),
+                    'content': 'CGU'
                 },
                 {
-                    'start': new Date(2010,7,29),
-                    'content': 'Phone call<br><img src="img/Hardware-Mobile-Phone-icon.png" style="width:32px; height:32px;">'
+                    'start': new Date(2022,1,07),
+                    'end': new Date(2022,4,29),
+                    'content': 'TJDFT'
                 },
-                {
-                    'start': new Date(2010,7,31),
-                    'end': new Date(2010,8,3),
-                    'content': 'Traject B'
-                },
-                {
-                    'start': new Date(2010,8,4,12,0,0),
-                    'content': 'Report<br><img src="img/attachment-icon.png" style="width:32px; height:32px;">'
-                }
             ];
 
             // specify options
