--- a/index.html
+++ b/index.html
@@ -19,18 +19,7 @@
 
     <!-- STYLE-->
     <link rel="stylesheet" type="text/css" href="./static/styles/timeline.css">
-    <link rel="stylesheet" type="text/css" href="./static/styles/metismenujs.min.css">
-    <link rel="stylesheet" type="text/css" href="./static/styles/timeline.css">
-    <link rel="stylesheet" type="text/css" href="./static/styles/StyleOnePost">
-    <link rel="stylesheet" type="text/css" href="./static/styles/colors.css">
-    <link rel="stylesheet" type="text/css" href="./static/styles/styles-pwa.css">
-    <link rel="stylesheet" type="text/css" href="./static/styles/style.css">
-    <link rel="stylesheet" type="text/css" href="./static/styles/FooterStyle.css">
-    <link rel="stylesheet" type="text/css" href="./static/styles/StyleCard.css">
-    <link rel="stylesheet" type="text/css" href="./static/styles/StyleContador">
-    <link rel="stylesheet" type="text/css" href="./static/styles/StyleHeader.css">
-    <link rel="stylesheet" type="text/css" href="./static/styles/StyleKanbam.css">
-    <link rel="stylesheet" type="text/css" href="./static/styles/StyleTeam.css">
+    <link rel="stylesheet" type="text/css" href="./static/styles/style.css>
 
 </head>
 <body onload="drawVisualization();">
