--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <!-- STYLE-->
     <link rel="stylesheet" type="text/css" href="./static/styles/timeline.css">
-    <link rel="stylesheet" type="text/css" href="./static/styles/style.css>
+    <link rel="stylesheet" href="static/styles/style.css" type="text/css">
 
 </head>
 <body onload="drawVisualization();">
