--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li><a href="#laboratory"><i class="fa fa-comments"></i> Laboratory </a></li>
                 <li>
                   <div class="btn">
-                    <a href="https://saulocandeira.github.io/my-projects/"><button>Voltar</button></a>
+                    <a href="https://saulocandeira.github.io/my-projects/">Voltar</a>
                   </div>
                 </li>
             </ul>
