--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
              <div class="container">        
                 
 		
-                <iframe src="templates/timeline" height="800" width="800" scrolling="no"></iframe> 
+                <iframe src="templates/kanbam/kanbam.html" height="800" width="800" scrolling="no"></iframe> 
                 
               </div>              
 
